# pomsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GFA.hpp  PomsaConfig.h.in  alignToGraph.hpp  graph.hpp
include/align/: alignToGraph.hpp
include/graph/: graph.hpp
src/: help.txt  pomsa.cpp
test/: test.cpp  testR.cpp  testSim.cpp
test/data/: sequences1  sequences2  sequences3  sequences500  sequences70
test/data/dif/: seq  seq16  seq20  seq4  seq8
